[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quiverfeed"
dynamic = ["version"]
description = "Point-in-time-safe Python client for Quiver Quantitative data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "quiverfeed contributors" }]
keywords = ["quiver", "finance", "alternative-data", "pandas", "backtesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "pandas>=2.1",
    "pyarrow>=14",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
quiverfeed = "quiverfeed.__main__:main"

[project.urls]
Homepage = "https://github.com/parithosh/quiverfeed"
Issues = "https://github.com/parithosh/quiverfeed/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/quiverfeed/_version.py"
fallback_version = "0.0.0+local"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
